<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:alpha="0.04"
        android:scaleType="center"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/green_cycle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/green_cycle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_cycle"
            android:textColor="@color/textDarkPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText

            android:id="@+id/input_green_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_25"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/green_cycle_label"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/red_cycle_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_cycle_group">


        <TextView
            android:id="@+id/red_cycle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_cycle"
            android:textColor="@color/textDarkPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/green_cycle_label" />


        <EditText
            android:id="@+id/input_red_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_g_36"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/red_cycle_label"
            app:layout_constraintTop_toBottomOf="@+id/input_green_cycle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/now_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red_cycle_group">

        <TextView
            android:id="@+id/now_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_started"
            android:textColor="@color/textDarkPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/red_cycle_label" />

        <ToggleButton
            android:id="@+id/current_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togglebutton"
            android:textOff="@string/green"
            android:textOn="@string/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toEndOf="@+id/now_label"
            app:layout_constraintTop_toBottomOf="@+id/input_red_cycle" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>