<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="386dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.04"
        android:scaleType="center"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <LinearLayout
        android:id="@+id/time_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_container">

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDarkPrimary"
            android:text="@string/time_to_green" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/textDarkPrimary"
            android:layout_marginStart="8dp"
            tools:layout_editor_absoluteY="311dp"
            tools:text="5.3 " />

        <TextView
            android:id="@+id/time_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"
            android:textColor="@color/textDarkPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distance_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommended_speed_container">

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDarkPrimary"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distance_remaining"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            tools:layout_editor_absoluteY="311dp"
            android:textColor="@color/textDarkPrimary"
            tools:text="5.3 " />

        <TextView
            android:id="@+id/distance_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            android:textColor="@color/textDarkPrimary" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/speed_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map">


        <TextView
            android:id="@+id/current_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDarkPrimary"
            android:text="@string/current_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <TextView
            android:id="@+id/current_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/textDarkPrimary"
            tools:text="4.5" />

        <TextView
            android:id="@+id/current_speed_units"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/km_h"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/textDarkPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommended_speed_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_container">

        <TextView
            android:id="@+id/recommended_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textDarkPrimary"
            android:textSize="16sp"
            android:text="@string/recommended_speed" />

        <TextView
            android:id="@+id/recommended_speed"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/textDarkPrimary"

            android:textSize="16sp"
            tools:layout_editor_absoluteY="311dp"
            tools:text="5.3" />

        <TextView
            android:id="@+id/recommended_speed_units"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_h"
            android:textColor="@color/textDarkPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/light_settings_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_container">


        <LinearLayout
            android:id="@+id/light_settings_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/green_cycle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/green_cycle" />

            <TextView
                android:id="@+id/green_cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="123" />

            <TextView
                android:id="@+id/red_cycle_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/red_cycle" />

            <TextView
                android:id="@+id/red_cycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="123" />

            <TextView
                android:id="@+id/current_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/current" />

            <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Green 123" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/light_settings_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <Button
                android:id="@+id/open_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignParentEnd="true"
                android:text="@string/settings" />

            <Button
                android:id="@+id/select_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_toStartOf="@id/open_settings"
                android:text="@string/select" />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/request_nearest"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="find all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/get_closest"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="find closest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/request_nearest" />


</android.support.constraint.ConstraintLayout>